# atlas

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  dashboard-snapshot.html  docker-compose.yml  pyproject.toml  website.html
.github/workflows/: ci.yml
REVIEW_PACKAGE/: 00_GROUND_TRUTH.md  01_EXECUTIVE_SUMMARY.md  02_SYSTEM_ARCHITECTURE.md  03_DATA_PIPELINE.md  04_FACTOR_LIBRARY.md  05_SCORING_ENGINE.md  06_PORTFOLIO_CONSTRUCTION.md  07_RISK_MANAGEMENT.md  08_BACKTESTING.md  09_AI_AGENT_DESIGN.md  10_CODEBASE_OVERVIEW.md  11_CONFIGURATION_REFERENCE.md  12_DEPENDENCIES.md  13_TESTING.md  14_SECURITY.md  15_PERFORMANCE.md  16_KNOWN_LIMITATIONS.md  17_OPEN_QUESTIONS.md  18_REVIEW_CHECKLIST.md  19_FILE_INDEX.md  20_APPENDIX.md  AI_AGENT_CONTROL_MODEL.md  BACKTEST_REPRODUCIBILITY.md  BASELINE_COMPARISON_REQUIREMENTS.md  DOCUMENTATION_CODE_DISCREPANCIES.md  EVIDENCE_BASE.md  EVIDENCE_INDEX.md  EXECUTION_SAFETY_REVIEW.md  FINAL_INDEPENDENT_REVIEW_READINESS.md  GPT_REVIEW_INPUT_GUIDE.md  P1_DESIGN.md  PERFORMANCE_EVIDENCE.md  POINT_IN_TIME_AND_BIAS_ANALYSIS.md  QUANTITATIVE_ASSUMPTION_REGISTER.md  README.md  REMEDIATION_BACKLOG.md  REPOSITORY_SNAPSHOT.md  REVIEW_MANIFEST.json  STATISTICAL_VALIDATION_GAPS.md  STRATEGY_IMPLEMENTATION_TRACEABILITY.md
migrations/: env.py
ops/: AtlasServer.applescript  backup.sh  backup_linux.sh  migrate_from_dump.sh  provision.sh  run_api.sh  run_daily.sh
seeds/: instruments_seed.csv  limit_set_v1.json  universe.json  validation_instruments.csv  validation_sp500_members.csv
tests/: conftest.py
(+548 files in other folders)
