[project]
name = "atlas"
version = "0.1.0"
description = "Atlas AI Capital — AI investment operating system (Phase 1 foundation)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "exchange_calendars>=4.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100", "ruff>=0.5", "mypy>=1.10"]
dashboard = ["streamlit>=1.36"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["atlas/core", "atlas/dcp"]

[[tool.mypy.overrides]]
module = "exchange_calendars.*"
ignore_missing_imports = true
